--- a/index.ipynb
+++ b/index.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,8 +52,20 @@
     "#Instead, you would normally store those passwords under a sub file like passwords.py which you would then import.\n",
     "#Or even better, as an environment variable that could then be imported!\n",
     "#For now, we'll simply hardcode them into our notebook for simplicity.\n",
-    "client_id = #Your client ID goes here (as a string)\n",
-    "api_key = #Your api key goes here (as a string)"
+    "client_id = 'hkmQClvOY6h0M9H3Pd1pOg' #Your client ID goes here (as a string)\n",
+    "api_key = 'oJbjVcsSqKLqR2hu4yB8QHllpywC8mAf3TFgFjnyeAQH_9lbkK7vLTKwkMEnnRnVURUbZ4Y37O0csqEthS8Z5Lio79PZ6Mhf-urf1W3aI-CWTtM4Ccn3EGuPumCRXHYx'\n",
+    "#Your api key goes here (as a string)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "import pandas as pd\n",
+    "import json"
    ]
   },
   {
@@ -68,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +89,7 @@
      "text": [
       "<Response [200]>\n",
       "<class 'str'>\n",
-      "{\"businesses\": [{\"id\": \"jeWIYbgBho9vBDhc5S1xvg\", \"alias\": \"holy-guacamole-astoria\", \"name\": \"Holy Guacamole\", \"image_url\": \"https://s3-media1.fl.yelpcdn.com/bphoto/8IjT2jd7vKDSOmtdXPI-Zg/o.jpg\", \"is_closed\": false, \"url\": \"https://www.yelp.com/biz/holy-guacamole-astoria?adjust_creative=xNHtXRpNa-MXGFJJTHHUvw&utm_campaign=yelp_api_v3&utm_medium=api_v3_business_search&utm_source=xNHtXRpNa-MXGFJJTHHUvw\", \"review_count\": 108, \"categories\": [{\"alias\": \"mexican\", \"title\": \"Mexican\"}, {\"alias\": \"bars\", \"title\": \"Bars\"}], \"rating\": 4.0, \"coordinates\": {\"latitude\": 40.756621, \"longitude\": -73.929336}, \"transactions\": [\"delivery\", \"pickup\"], \"price\": \"$$\", \"location\": {\"address1\": \"3555 31st St\", \"address2\": \"\", \"address3\": \"\", \"city\": \"Astoria\", \"zip_code\": \"11106\", \"country\": \"US\", \"state\": \"NY\", \"display_address\": [\"3555 31st St\", \"Astoria, NY 11106\"]}, \"phone\": \"+19178327261\", \"display_phone\": \"(917) 832-7261\", \"distance\": 1290.4274875130448}, {\"id\": \"6AJwsgXr7YwsqneGVAdgzw\", \"alias\": \"las-c\n"
+      "{\"businesses\": [{\"id\": \"AUyKmFjpaVLwc3awfUnqgQ\", \"alias\": \"chela-and-garnacha-astoria\", \"name\": \"Chela & Garnacha\", \"image_url\": \"https://s3-media1.fl.yelpcdn.com/bphoto/ChVbA1_xqLHFXL4Iyh84NA/o.jpg\", \"is_closed\": false, \"url\": \"https://www.yelp.com/biz/chela-and-garnacha-astoria?adjust_creative=hkmQClvOY6h0M9H3Pd1pOg&utm_campaign=yelp_api_v3&utm_medium=api_v3_business_search&utm_source=hkmQClvOY6h0M9H3Pd1pOg\", \"review_count\": 335, \"categories\": [{\"alias\": \"mexican\", \"title\": \"Mexican\"}, {\"alias\": \"wine_bars\", \"title\": \"Wine Bars\"}, {\"alias\": \"breakfast_brunch\", \"title\": \"Breakfast & Brunch\"}], \"rating\": 4.5, \"coordinates\": {\"latitude\": 40.7557171543477, \"longitude\": -73.927811292412}, \"transactions\": [\"pickup\", \"delivery\"], \"price\": \"$$\", \"location\": {\"address1\": \"33-09 36th Ave\", \"address2\": \"\", \"address3\": \"\", \"city\": \"Astoria\", \"zip_code\": \"11106\", \"country\": \"US\", \"state\": \"NY\", \"display_address\": [\"33-09 36th Ave\", \"Astoria, NY 11106\"]}, \"phone\": \"+19178326876\", \"display_phone\": \n"
      ]
     }
    ],
@@ -134,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +155,7 @@
        "dict_keys(['businesses', 'total', 'region'])"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,64 +215,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'id': 'jeWIYbgBho9vBDhc5S1xvg',\n",
-       "  'alias': 'holy-guacamole-astoria',\n",
-       "  'name': 'Holy Guacamole',\n",
-       "  'image_url': 'https://s3-media1.fl.yelpcdn.com/bphoto/8IjT2jd7vKDSOmtdXPI-Zg/o.jpg',\n",
+       "[{'id': 'AUyKmFjpaVLwc3awfUnqgQ',\n",
+       "  'alias': 'chela-and-garnacha-astoria',\n",
+       "  'name': 'Chela & Garnacha',\n",
+       "  'image_url': 'https://s3-media1.fl.yelpcdn.com/bphoto/ChVbA1_xqLHFXL4Iyh84NA/o.jpg',\n",
        "  'is_closed': False,\n",
-       "  'url': 'https://www.yelp.com/biz/holy-guacamole-astoria?adjust_creative=xNHtXRpNa-MXGFJJTHHUvw&utm_campaign=yelp_api_v3&utm_medium=api_v3_business_search&utm_source=xNHtXRpNa-MXGFJJTHHUvw',\n",
-       "  'review_count': 108,\n",
+       "  'url': 'https://www.yelp.com/biz/chela-and-garnacha-astoria?adjust_creative=hkmQClvOY6h0M9H3Pd1pOg&utm_campaign=yelp_api_v3&utm_medium=api_v3_business_search&utm_source=hkmQClvOY6h0M9H3Pd1pOg',\n",
+       "  'review_count': 335,\n",
        "  'categories': [{'alias': 'mexican', 'title': 'Mexican'},\n",
-       "   {'alias': 'bars', 'title': 'Bars'}],\n",
-       "  'rating': 4.0,\n",
-       "  'coordinates': {'latitude': 40.756621, 'longitude': -73.929336},\n",
-       "  'transactions': ['delivery', 'pickup'],\n",
+       "   {'alias': 'wine_bars', 'title': 'Wine Bars'},\n",
+       "   {'alias': 'breakfast_brunch', 'title': 'Breakfast & Brunch'}],\n",
+       "  'rating': 4.5,\n",
+       "  'coordinates': {'latitude': 40.7557171543477, 'longitude': -73.927811292412},\n",
+       "  'transactions': ['pickup', 'delivery'],\n",
        "  'price': '$$',\n",
-       "  'location': {'address1': '3555 31st St',\n",
+       "  'location': {'address1': '33-09 36th Ave',\n",
        "   'address2': '',\n",
        "   'address3': '',\n",
        "   'city': 'Astoria',\n",
        "   'zip_code': '11106',\n",
        "   'country': 'US',\n",
        "   'state': 'NY',\n",
-       "   'display_address': ['3555 31st St', 'Astoria, NY 11106']},\n",
-       "  'phone': '+19178327261',\n",
-       "  'display_phone': '(917) 832-7261',\n",
-       "  'distance': 1290.4274875130448},\n",
-       " {'id': '6AJwsgXr7YwsqneGVAdgzw',\n",
-       "  'alias': 'las-catrinas-mexican-bar-and-eatery-astoria',\n",
-       "  'name': 'Las Catrinas Mexican Bar & Eatery',\n",
-       "  'image_url': 'https://s3-media3.fl.yelpcdn.com/bphoto/CKRiZUoyTUjs79bWnDEEpg/o.jpg',\n",
+       "   'display_address': ['33-09 36th Ave', 'Astoria, NY 11106']},\n",
+       "  'phone': '+19178326876',\n",
+       "  'display_phone': '(917) 832-6876',\n",
+       "  'distance': 1318.3265473785546},\n",
+       " {'id': 'jzVv_21473lAMYXIhVbuTA',\n",
+       "  'alias': 'de-mole-astoria-astoria',\n",
+       "  'name': 'De Mole Astoria',\n",
+       "  'image_url': 'https://s3-media1.fl.yelpcdn.com/bphoto/zZTTfdIGbQkQQptgQmin1A/o.jpg',\n",
        "  'is_closed': False,\n",
-       "  'url': 'https://www.yelp.com/biz/las-catrinas-mexican-bar-and-eatery-astoria?adjust_creative=xNHtXRpNa-MXGFJJTHHUvw&utm_campaign=yelp_api_v3&utm_medium=api_v3_business_search&utm_source=xNHtXRpNa-MXGFJJTHHUvw',\n",
-       "  'review_count': 163,\n",
-       "  'categories': [{'alias': 'mexican', 'title': 'Mexican'},\n",
-       "   {'alias': 'cocktailbars', 'title': 'Cocktail Bars'}],\n",
+       "  'url': 'https://www.yelp.com/biz/de-mole-astoria-astoria?adjust_creative=hkmQClvOY6h0M9H3Pd1pOg&utm_campaign=yelp_api_v3&utm_medium=api_v3_business_search&utm_source=hkmQClvOY6h0M9H3Pd1pOg',\n",
+       "  'review_count': 338,\n",
+       "  'categories': [{'alias': 'mexican', 'title': 'Mexican'}],\n",
        "  'rating': 4.0,\n",
-       "  'coordinates': {'latitude': 40.7614214682633,\n",
-       "   'longitude': -73.9246649456171},\n",
-       "  'transactions': ['delivery', 'pickup'],\n",
+       "  'coordinates': {'latitude': 40.7625999, 'longitude': -73.9129028},\n",
+       "  'transactions': ['pickup', 'delivery'],\n",
        "  'price': '$$',\n",
-       "  'location': {'address1': '32-02 Broadway',\n",
+       "  'location': {'address1': '4220 30th Ave',\n",
        "   'address2': '',\n",
-       "   'address3': None,\n",
+       "   'address3': '',\n",
        "   'city': 'Astoria',\n",
-       "   'zip_code': '11106',\n",
+       "   'zip_code': '11103',\n",
        "   'country': 'US',\n",
        "   'state': 'NY',\n",
-       "   'display_address': ['32-02 Broadway', 'Astoria, NY 11106']},\n",
-       "  'phone': '+19177450969',\n",
-       "  'display_phone': '(917) 745-0969',\n",
-       "  'distance': 642.5257707161409}]"
+       "   'display_address': ['4220 30th Ave', 'Astoria, NY 11103']},\n",
+       "  'phone': '+17187771655',\n",
+       "  'display_phone': '(718) 777-1655',\n",
+       "  'distance': 918.0927716406379}]"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,16 +282,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "638"
+       "665"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +311,7 @@
        "{'center': {'longitude': -73.92219543457031, 'latitude': 40.76688875374591}}"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -579,7 +590,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
